# vodka_sol

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json
migrations/: custom.ts  deploy.ts  hello.ts  interact.ts  output.csv
path/to/your/: new-program-id.json
programs/fuck2/src/: lib.rs
programs/vodka/: Cargo.toml
programs/vodka/src/: lib.rs
tests/: sol_betting_game.ts
