[package]
name = "sol_betting_game"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sol_betting_game"

[profile.release]
opt-level = "z"  # Оптимизация для размера
lto = true  # Включение Link Time Optimization
codegen-units = 1  # Уменьшение числа единиц генерации кода для улучшения оптимизации

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.28.0"}
anchor-spl = "0.28.0"